Add initial content

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,13 @@
   <script src="/mathbox-bundle.min.js"></script>
   <link rel="stylesheet" href="/mathbox.css">
 
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Source+Sans+Pro:ital,wght@0,700;0,900;1,700;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+
   <title>SoME ML</title>
 </head>
 
