--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,6 +11,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel='preload' as="image" href="%PUBLIC_URL%/assets/terminator.jpg">
   <link
     href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Source+Sans+Pro:ital,wght@0,700;0,900;1,700;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
@@ -26,10 +27,10 @@
 <!-- JQuery -->
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 <!-- MathQuill -->
-<script src="/mathquill.min.js"></script>
+<script src="/mathquill.min.js" async></script>
 <link rel="stylesheet" href="/mathquill.css">
 <!-- MathBox -->
-<script src="/mathbox-bundle.min.js"></script>
+<script src="/mathbox-bundle.min.js" async></script>
 <link rel="stylesheet" href="/mathbox.css">
 
 </html>
