Lazy load fonts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,14 +12,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel='preload' as="image" href="%PUBLIC_URL%/assets/terminator.jpg">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Source+Sans+Pro:ital,wght@0,700;0,900;1,700;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet">
+  <link rel="stylesheet">
 
   <title>SoME ML</title>
 </head>
 
 <body>
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Source+Sans+Pro:ital,wght@0,700;0,900;1,700;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    onload="this.rel='stylesheet'">
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
